--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     "require": {
         "ext-json": "*",
         "php": "^8.0|^8.1",
-        "illuminate/support": "^8.0|^9.0"
+        "illuminate/support": "^8.0|^9.0|^10.0"
     },
     "extra": {
         "laravel": {
